--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@getbrevo/brevo": "^3.0.1",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.12.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
