--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "express": "^5.1.0",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.1",
+    "mongoose": "^9.1.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
-    "sequelize": "^6.37.7",
     "sib-api-v3-sdk": "^8.5.0",
     "stripe": "^18.5.0",
     "uuid": "^13.0.0"
